@@ -182,15 +182,19 @@ The following sections describe the use of each of the metacharacters.
 .rs
 .sp
 The backslash character has several uses. Firstly, if it is followed by a
-non-alphanumeric character, it takes away any special meaning that character
-may have. This use of backslash as an escape character applies both inside and
-outside character classes.
+character that is not a number or a letter, it takes away any special meaning
+that character may have. This use of backslash as an escape character applies
+both inside and outside character classes. 
 .P
 For example, if you want to match a * character, you write \e* in the pattern.
 This escaping action applies whether or not the following character would
 otherwise be interpreted as a metacharacter, so it is always safe to precede a
 non-alphanumeric with backslash to specify that it stands for itself. In
 particular, if you want to match a backslash, you write \e\e.
+.P
+In UTF-8 mode, only ASCII numbers and letters have any special meaning after a
+backslash. All other characters (in particular, those whose codepoints are 
+greater than 127) are treated as literals.
 .P
 If a pattern is compiled with the PCRE_EXTENDED option, whitespace in the
 pattern (other than in a character class) and characters between a # outside
@@ -225,7 +229,7 @@ but when a pattern is being prepared by text editing, it is often easier to use
 one of the following escape sequences than the binary character it represents:
 .sp
   \ea        alarm, that is, the BEL character (hex 07)
-  \ecx       "control-x", where x is any character
+  \ecx       "control-x", where x is any ASCII character
   \ee        escape (hex 1B)
   \ef        formfeed (hex 0C)
   \en        linefeed (hex 0A)
@@ -237,8 +241,12 @@ one of the following escape sequences than the binary character it represents:
 .sp
 The precise effect of \ecx is as follows: if x is a lower case letter, it
 is converted to upper case. Then bit 6 of the character (hex 40) is inverted.
-Thus \ecz becomes hex 1A, but \ec{ becomes hex 3B, while \ec; becomes hex
-7B.
+Thus \ecz becomes hex 1A (z is 7A), but \ec{ becomes hex 3B ({ is 7B), while
+\ec; becomes hex 7B (; is 3B). If the byte following \ec has a value greater 
+than 127, a compile-time error occurs. This locks out non-ASCII characters in 
+both byte mode and UTF-8 mode. (When PCRE is compiled in EBCDIC mode, all byte 
+values are valid. A lower case letter is converted to upper case, and then the 
+0xc0 bits are flipped.)
 .P
 After \ex, from zero to two hexadecimal digits are read (letters can be in
 upper or lower case). Any number of hexadecimal digits may appear between \ex{
@@ -2718,6 +2726,6 @@ Cambridge CB2 3QH, England.
 .rs
 .sp
 .nf
-Last updated: 17 November 2010
+Last updated: 20 November 2010
 Copyright (c) 1997-2010 University of Cambridge.
 .fi
