@@ -4076,4 +4076,7 @@
 /[\x00-\xff\s]+/
     \x0a\x0b\x0c\x0d
 
+/^\c/
+    ?
+
 /-- End of testinput1 --/
